fix: faq alignment

--- a/src/_includes/components/faqs/faqs.scss
+++ b/src/_includes/components/faqs/faqs.scss
@@ -23,6 +23,7 @@
     cursor: pointer;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 1rem;
     user-select: none;
     
